-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8, 11, 17, 18, 19, 20
-
Component/s: hotspot
-
b06
-
generic
VMReg has the same issues as Assembler, for the same reason.
- relates to
-
JDK-8289856 [PPC64] SIGSEGV in C2Compiler::init_c2_runtime() after JDK-8289060
-
- Resolved
-
-
JDK-8291798 VMRegImpl::print_on is broken after JDK-8289060
-
- Resolved
-
-
JDK-8289046 Undefined Behaviour in x86 class Assembler
-
- Resolved
-
-
JDK-8291895 Remove PRAGMA_NONNULL_IGNORED from x86 and AArch64
-
- Resolved
-
(1 links to)