8289060: Undefined Behaviour in class VMReg