src/hotspot/share/code/vmreg.cpp
@@ -28,7 +28,8 @@
 
 VMRegImpl all_VMRegs[ConcreteRegisterImpl::number_of_registers + 1];
 
-VMReg VMRegImpl::stack0 = as_VMReg((ConcreteRegisterImpl::number_of_registers + 7) & ~7);
+// First VMReg value that could refer to a stack slot
+VMReg VMRegImpl::stack0 = VMRegImpl::stack_0();
 
 // VMRegs are 4 bytes wide on all platforms
 const int VMRegImpl::stack_slot_size = 4;
